Add background to blue buttons in pattern library

--- a/_patterns/cards/card.html
+++ b/_patterns/cards/card.html
@@ -1,6 +1,6 @@
 <div class="products-card">
   <a href="#">
-    <img class="img-flex push-3-4" src="/images/vanilli.jpg" alt="">
+    <img class="img-flex push" src="/images/vanilli.jpg" alt="">
     <div class="gutter">
       <h5 class="push-1-4 kilo">Milli Vanilli</h5>
       <p class="milli pad-b">$42</p>
