Create checkout card and start form code

--- a/_patterns/cards/checkout-card.html
+++ b/_patterns/cards/checkout-card.html
@@ -1,6 +1,13 @@
-<div class="checkout-card">
-  <form class="" action="index.html" method="post">
-    <h4>Shipping</h4>
+<div class="checkout-card island-2 push">
+  <div class="shipping">
+    <h6 class="pad-t">Shipping</h6>
+    <p class="name"></p>
+    <p class="street"></p>
+    <p class="city"></p>
+    <p class="zip"></p>
+  </div>
 
+  <form class="payment push" action="index.html" method="post">
+    <h6 class="pad-t">Payment</h6>
   </form>
 </div>
