--- a/_patterns/banner/banner.html
+++ b/_patterns/banner/banner.html
@@ -1,4 +1,4 @@
-<div class="banner pad-t">
+<div class="banner pad-t pad-b">
   <div class="banner-content wrapper gutter-2">
     <h1 class="tena push-1-2">Your time. Your space.</h1>
     <p class="milli">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy.</p>
