--- a/_patterns/form/checkout-form.html
+++ b/_patterns/form/checkout-form.html
@@ -1,12 +1,12 @@
-<div class="checkout-form push">
+<div class="checkout-form push pad-t pad-b-2 pad-r">
 
 
-    <form class="payment max-length island-2" method="post" action="#" novalidate>
+    <form class="payment max-length island pad-b-2" method="post" action="#" novalidate>
 
       <div class="grid gutter">
         <div class="unit xs-1 s-1 m-1 l-1" tabindex="0">
           <fieldset class="push-2 island-1-8">
-            <legend class="push">Shipping</legend>
+            <legend class="push pad-t mega">Shipping</legend>
             <p class="address">Thomas Anderson<br>13 Continental Ave<br>Ottawa, ON<br>K2P 0C7</p>
           </fieldset>
         </div>
@@ -14,7 +14,7 @@
         <div>
           <div class="unit xs-1 s-1 m-1 l-1" tabindex="0">
             <fieldset class="push-0 island-1-8">
-              <legend class="">Payment</legend>
+              <legend class="push mega">Payment</legend>
             </fieldset>
           </div>
 
@@ -26,38 +26,42 @@
         </div>
 
         <div class="unit xs-1 push island-1-8">
-          <label for="name">Name on card</label>
+          <label class="milli push-1-8" for="name">Name on card</label>
           <input id="name" required aria-describedby="name-error">
           <p class="error-message milli island-1-4 push-0" id="name-error">
-            <i class="icon i-16"><svg><use xlink:href="images/icons.svg#eerror" /></svg></i>
             <span class="icon-label">Please enter your name as it appears on card.</span>
           </p>
         </div>
 
         <div class="unit xs-1 push island-1-8">
-          <label for="card-number">Card Number</label>
+          <label class="milli push-1-8" for="card-number">Card Number</label>
           <input type="card-number" id="card-number" required aria-describedby="card-number-error">
           <p class="error-message milli island-1-4 push-0" id="email-error">
-            <i class="icon i-16"><svg><use xlink:href="images/icons.svg#error" /></svg></i>
             <span class="icon-label">Please enter your card number.</span>
           </p>
         </div>
 
-        <div class="unit xs-1-2" tabindex="0">
+        <div class="unit xs-1-2 push" tabindex="0">
           <div class="push-1-2 island-1-4">
-            <label class="milli" for="month">Valid through</label>
-            <input id="month">
+            <label class="milli push-1-8" for="expiry">Expiry (MMDD)</label>
+            <input id="expiry">
+            <p class="error-message milli island-1-4 push-0" id="expiry-error">
+              <span class="icon-label">Please enter expiry.</span>
+            </p>
           </div>
         </div>
 
         <div class="unit xs-1-2 island-1-4" tabindex="0">
           <div class="push-1-2">
-            <label class="milli" for="cvc">CVC</label>
+            <label class="milli push-1-8" for="cvc">CVC</label>
             <input id="cvc">
+            <p class="error-message milli island-1-4 push-0" id="cvc-error">
+              <span class="icon-label">Please enter CVC.</span>
+            </p>
           </div>
         </div>
 
-        <div class="pad-t-1-2">
+        <div class="island-1-4 push">
           <button class="btn btn-blue" type="submit">Checkout</button>
         </div>
       </form>
