Update products card background colour and text

--- a/_patterns/cards/product.html
+++ b/_patterns/cards/product.html
@@ -4,7 +4,7 @@
     </div>
     <div class="product-content island">
       <h6 class="collection pico push-0">The Continental</h6>
-      <h3 class="product-name exa push-0">Milli Vanilli</h3>
+      <h3 class="product-name exa push-0">Milli WAAnilli</h3>
       <p class="micro">Soy Wax Candle</p>
       <h6 class="price mega"><sup>$</sup>42</h6>
     </div>
