Update product filters

--- a/_patterns/navigation/product-filters.html
+++ b/_patterns/navigation/product-filters.html
@@ -19,8 +19,8 @@
       <select class="gutter-1-4 milli" id="filter" name="Filter">
         <option>Any</option>
         <option>Candles</option>
+        <option>Incense</option>
         <option>Decor</option>
-        <option>Male</option>
       </select>
     </div>
   </div>
