Update sign up button grid

--- a/_patterns/forms/sign-up.html
+++ b/_patterns/forms/sign-up.html
@@ -1,8 +1,10 @@
 <form class="sign-up max-length" method="post" action="#" novalidate>
 
-  <div class="grid grid-bottom">
-    <div class="unit unit-xs-1 unit-m-2-3 island-1-4">
-      <label class="milli push-1-8" for="email">Join our mailing list!</label>
+  <div class="grid grid-middle push-0">
+    <div class="unit unit-xs-1 gutter-1-4">
+      <label class="milli push-0" for="email">Join our mailing list!</label>
+    </div>
+    <div class="unit unit-xs-1 unit-m-2-3 island-1-8  push-1-4">
       <div class="error-bg">
         <input id="email" required aria-describedby="email-error">
         <p class="error-message milli island-1-4 push-0" id="email-error">
@@ -10,7 +12,7 @@
         </p>
       </div>
     </div>
-    <div class="unit unit-xs-1 unit-m-1-3 island-1-4">
+    <div class="unit unit-xs-1 unit-m-1-3 island-1-8 push-1-4">
       <button class="btn btn-basic" type="submit">Sign Up</button>
     </div>
   </div>
