--- a/_patterns/footer/footer.html
+++ b/_patterns/footer/footer.html
@@ -1,15 +1,10 @@
-<footer role="contentinfo" class="grid grid-middle gutter" tabindex="0">
-  <div class="unit xs-1 m-1 l-1-3 text-center pad-t-1-2 pad-b-1-2">
-    <i class="icon i-64">
-      <img src="/images/logo.svg" alt="">
-    </i>
-    <span class="icon-label tera bold gutter-1-8">ǦoneWick<span class="copyright gutter-1-4 micro pad-b">© 2020</span></span>
-  </div>
-  <div class="unit xs-1 m-1 l-1-3 text-center pad-t-1-2 pad-b-1-2">
+<footer role="contentinfo" class="grid grid-middle gutter pad-t pad-b" tabindex="0">
+
+  <div class="unit xs-1 m-1 l-1-2 text-center push-1-8">
     <a class="micro terms" href="#">Privacy Policy & Terms of Use</a>
   </div>
 
-  <nav class="unit xs-1 m-1 l-1-3 text-center pad-l-2 pad-t-1-2 pad-b-1-2" role="navigation" id="nav" tabindex="0">
+  <nav class="unit xs-1 m-1 l-1-2 text-center pad-l-2" role="navigation" id="nav" tabindex="0">
     <ul class="list-group push-0 socials">
       <li class="unit pad-b-1-2 pad-t-1-2"><a class="micro island-1-4" href="#">Facebook</a></li>
       <li class="unit pad-b-1-2 pad-t-1-2"><a class="micro island-1-4" href="#">Instagram</a></li>
