--- a/_patterns/header/header.html
+++ b/_patterns/header/header.html
@@ -1,15 +1,17 @@
 <header role="banner" class="grid grid-middle gutter" tabindex="0">
   <div class="unit xs-1 m-1-3 l-1-3 text-center">
-    <i class="icon i-64">
-      <img src="/images/logo.svg" alt="">
-    </i>
-    <span class="icon-label tera bold gutter-1-8">ǦoneWick</span>
+    <a href="/index/">
+      <i class="icon i-64">
+        <img src="/images/logo.svg" alt="">
+      </i>
+      <span class="icon-label tera bold gutter-1-8">ǦoneWick</span>
+    </a>
   </div>
 
   <nav class="unit xs-1 m-2-3 l-2-3 text-center pad-l-2" role="navigation" id="nav" tabindex="0">
     <ul class="list-group list-group-inline push-0">
       <li class="unit pad-b-1-2 pad-t-1-2"><a class="milli island-1-2" href="#">About</a></li>
-      <li class="unit pad-b-1-2 pad-t-1-2"><a class="milli island-1-2" href="#">Shop</a></li>
+      <li class="unit pad-b-1-2 pad-t-1-2"><a class="milli island-1-2" href="/products/">Shop</a></li>
       <li class="unit pad-b-1-4 pad-t-1-4"><a class="milli island-1-2" href="#">Blog</a></li>
     </ul>
   </nav>
