Build home page with patterns

--- a/_patterns/cards/image-card.html
+++ b/_patterns/cards/image-card.html
@@ -1,6 +1,7 @@
 <div class="image-card">
-  <svg class="solid">
+  <svg class="solid absolute">
     <rect width="450" height="250">
   </svg>
-  <img class="img-flex" src="/images/vanilli.jpg" alt="">
+  <img class="relative" src="/images/vanilli.jpg" alt="">
+
 </div>
