--- a/_patterns/sections/intro-text.html
+++ b/_patterns/sections/intro-text.html
@@ -1,4 +1,4 @@
-<div class="intro-text wrapper max-length">
+<div class="intro-text wrapper max-length gutter-2">
   <h1 class="tena push-1-2">Wax &amp; Wane</h1>
   <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore tetur sadipscing elitr, sed diam.</p>
 </div>
