--- a/_patterns/banner/banner.html
+++ b/_patterns/banner/banner.html
@@ -1,7 +1,7 @@
 <div class="banner pad-t pad-b">
   <div class="banner-content wrapper gutter-2">
-    <h1 class="tena push-1-2">Your time. Your space.</h1>
-    <p class="milli">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy.</p>
+    <h1 class="tena push-1-2">{{include.heading}}</h1>
+    <p class="milli">{{include.text}}</p>
     <a class="btn btn-ghost" href="#">Shop Continental</a>
   </div>
 </div>
