--- a/_patterns/footer/footer.html
+++ b/_patterns/footer/footer.html
@@ -6,9 +6,9 @@
 
   <nav class="unit xs-1 m-1 l-1-2 text-center pad-l-2" role="navigation" id="nav" tabindex="0">
     <ul class="list-group push-0 socials">
-      <li class="unit pad-b-1-2 pad-t-1-2"><a class="micro island-1-4" href="#">Facebook</a></li>
+      <li class="unit pad-b-1-2 pad-t-1-2"><a class="micro" href="#">Facebook</a></li>
       <li class="unit pad-b-1-2 pad-t-1-2"><a class="micro island-1-4" href="#">Instagram</a></li>
-      <li class="unit pad-b-1-4 pad-t-1-4"><a class="micro island-1-4" href="#">Twitter</a></li>
+      <li class="unit pad-b-1-4 pad-t-1-4"><a class="micro" href="#">Twitter</a></li>
     </ul>
   </nav>
 </footer>
