Add terms and conditions page

--- a/_patterns/footer/footer.html
+++ b/_patterns/footer/footer.html
@@ -1,7 +1,7 @@
 <footer role="contentinfo" class="grid grid-middle gutter pad-t pad-b" tabindex="0">
 
   <div class="unit xs-1 m-1 l-1-2 text-center push-1-8">
-    <a class="micro terms" href="#">Privacy Policy & Terms of Use</a>
+    <a class="micro terms" href="/terms/">Privacy Policy & Terms of Use</a>
   </div>
 
   <nav class="unit xs-1 m-1 l-1-2 text-center pad-l-2" role="navigation" id="nav" tabindex="0">
