--- a/_patterns/header/header.html
+++ b/_patterns/header/header.html
@@ -1,4 +1,4 @@
-<header role="banner" class="grid grid-middle gutter" tabindex="0">
+<header role="banner" class="grid grid-middle gutter pad-t-1-8 pad-b-1-8" tabindex="0">
   <div class="unit xs-1 m-1-3 l-1-3 text-center">
     <a href="/index/">
       <i class="icon i-64">
