--- a/_patterns/sections/banner-text.html
+++ b/_patterns/sections/banner-text.html
@@ -1,4 +1,4 @@
   <div class="banner-content wrapper gutter-2">
     <h1 class="tena push-1-2">Your time. Your space.</h1>
-    <p class="milli">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy.</p>
+    <p class="milli">A beautiful space that adapts to you. What do you need?</p>
   </div>
