--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-{% pattern banner/banner %}
+{% pattern banner/banner button_text="Shop Continental" button_url="/products/" heading="Your time. Your space." text="Create an ambiance that bends and transcends reality. Out of this world." image="banner-1.jpg" colour="colour-1" %}
 {% pattern sections/image-text %}
 
  </div>
