--- a/products.html
+++ b/products.html
@@ -1,5 +1,6 @@
 ---
 layout: product
+highlight_nav: shop
 ---
 
-{% pattern banner/banner %}
+{% pattern banner/banner heading="Wax & Wane" text="A beautiful space that adapts to you. What do you need? " image="banner-2.jpg" colour="colour-2" %}
