--- a/terms.html
+++ b/terms.html
@@ -132,7 +132,7 @@ layout: default
 
   <p>We may use third-party Service Providers to monitor and analyze the use of our Service.</p>
 
-  <table>
+  <table class="push-2">
     <thead>
       <tr>
         <th scope="col">Service</th>
