--- a/_patterns/header/header.html
+++ b/_patterns/header/header.html
@@ -10,9 +10,9 @@
 
   <nav class="unit xs-1 m-2-3 l-2-3 text-center pad-l-2" role="navigation" id="nav" tabindex="0">
     <ul class="list-group list-group-inline push-0">
-      <li class="unit pad-b-1-2 pad-t-1-2"><a class="milli island-1-2" href="#">About</a></li>
-      <li class="unit pad-b-1-2 pad-t-1-2"><a class="milli island-1-2" href="/products/">Shop</a></li>
-      <li class="unit pad-b-1-4 pad-t-1-4"><a class="milli island-1-2" href="#">Blog</a></li>
+      <li class="unit {% if page.highlight_nav == 'about' %}currrent{% endif %} pad-b-1-2 pad-t-1-2"><a class="milli island-1-2" href="#">About</a></li>
+      <li class="unit {% if page.highlight_nav == 'shop' %}currrent{% endif %} pad-b-1-2 pad-t-1-2"><a class="milli island-1-2" href="/products/">Shop</a></li>
+      <li class="unit {% if page.highlight_nav == 'blog' %}currrent{% endif %} pad-b-1-4 pad-t-1-4"><a class="milli island-1-2" href="#">Blog</a></li>
     </ul>
   </nav>
 </header>
