Fix index patterns and spacing

--- a/_patterns/buttons/ghost.html
+++ b/_patterns/buttons/ghost.html
@@ -1,1 +1,1 @@
-<a class="btn btn-ghost" href="{{include.url}}">{{include.text}}</a>
+<a class="btn btn-ghost push" href="{{include.url}}">{{include.text}}</a>
