--- a/_patterns/cards/image-card.html
+++ b/_patterns/cards/image-card.html
@@ -1,7 +1,6 @@
 <div class="image-card">
-  <svg class="solid absolute">
-    <rect width="450" height="250">
+  <svg class="solid absolute {{include.colour}}">
+    <rect width="26.25em" height="15.625em">
   </svg>
-  <img class="relative" src="/images/vanilli.jpg" alt="">
-
+  <img class="relative img-flex" src="/images/{{include.image}}" alt="">
 </div>
