--- a/_patterns/footer/footer.html
+++ b/_patterns/footer/footer.html
@@ -1,4 +1,4 @@
-<footer role="contentinfo" class="grid grid-middle gutter pad-t pad-b" tabindex="0">
+<footer role="contentinfo" class="grid grid-middle gutter pad-t pad-b center-content" tabindex="0">
 
   <div class="unit xs-1 m-1 l-1-2 text-center push-1-8">
     <a class="micro terms" href="/terms/">Privacy Policy & Terms of Use</a>
