--- a/_patterns/header/header.html
+++ b/_patterns/header/header.html
@@ -1,4 +1,4 @@
-<header role="banner" class="grid grid-middle gutter pad-t-1-8 pad-b-1-8" tabindex="0">
+<header role="banner" class="grid grid-middle gutter pad-t-1-4 pad-b-1-4 fixed" tabindex="0">
   <div class="unit xs-1 m-1-3 l-1-3 text-center">
     <a href="/index/">
       <i class="icon i-64">
@@ -8,7 +8,7 @@
     </a>
   </div>
 
-  <nav class="unit xs-1 m-2-3 l-2-3 text-center pad-l-2" role="navigation" id="nav" tabindex="0">
+  <nav class="unit xs-1 m-2-3 l-2-3 text-right pad-l-2" role="navigation" id="nav" tabindex="0">
     <ul class="list-group list-group-inline push-0">
       <li class="unit {% if page.highlight_nav == 'about' %}currrent{% endif %} pad-b-1-2 pad-t-1-2"><a class="milli island-1-2" href="#">About</a></li>
       <li class="unit {% if page.highlight_nav == 'shop' %}currrent{% endif %} pad-b-1-2 pad-t-1-2"><a class="milli island-1-2" href="/products/">Shop</a></li>
