--- a/_patterns/sections/banner-text-button.html
+++ b/_patterns/sections/banner-text-button.html
@@ -1,4 +1,4 @@
-<div class="banner-content wrapper gutter-2">
+<div class="banner-content banner-text wrapper gutter-2">
   <h1 class="tena push-1-2">Your time. Your space.</h1>
   <p class="milli">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy.</p>
   <a class="btn btn-ghost" href="#">Shop Continental</a>
