--- a/_patterns/sections/section-intro.html
+++ b/_patterns/sections/section-intro.html
@@ -1,4 +1,4 @@
-<div class="section-intro wrapper max-length">
+<div class="section-intro wrapper">
   <h2 class="push-1-2">Evoke the elements</h2>
-  <p class="milli">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore tetur sadipscing elitr, sed diam.</p>
+  <p class="milli">Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
 </div>
