Adjust header colours and navigation links, add checkout icon link

--- a/_patterns/banner/banner.html
+++ b/_patterns/banner/banner.html
@@ -1,4 +1,4 @@
-<div class="banner crop relative">
+<div class="banner crop relative push-2">
 
   <img class="banner-img img-flex"src="/images/{{include.image}}/" alt="" aria-details="banner image of a living space">
 
