--- a/_patterns/cards/image-card.html
+++ b/_patterns/cards/image-card.html
@@ -1,6 +1,6 @@
 <div class="image-card">
   <svg class="solid absolute {{include.colour}}">
-    <rect width="26.25em" height="15.625em">
+    <rect width="16.8em" height="10em">
   </svg>
-  <img class="relative img-flex" src="/images/{{include.image}}" alt="">
+  <img class="relative" src="/images/{{include.image}}" alt="">
 </div>
