--- a/_patterns/forms/sign-up.html
+++ b/_patterns/forms/sign-up.html
@@ -1,6 +1,6 @@
-<form class="sign-up max-length" method="post" action="#" novalidate>
+<form class="sign-up max-length island-2 push-2" method="post" action="#" novalidate>
 
-  <div class="grid grid-middle push-0">
+  <div class="grid grid-middle push-0 pad-t-2">
     <div class="unit unit-xs-1 gutter-1-4">
       <label class="milli push-0" for="email">Join our mailing list!</label>
     </div>
