--- a/_patterns/header/header.html
+++ b/_patterns/header/header.html
@@ -1,18 +1,20 @@
-<header role="banner" class="grid grid-middle gutter pad-t-1-4 pad-b-1-4 fixed" tabindex="0">
-  <div class="unit xs-1 m-1-3 l-1-3 text-center">
+<header role="banner" class="grid grid-middle gutter pad-t-1-2 pad-b center-content" tabindex="0">
+  <div class="unit xs-1 m-1-3 l-1-2 text-center">
     <a href="/index/">
       <i class="icon i-64">
         <img src="/images/logo.svg" alt="">
       </i>
-      <span class="icon-label tera bold gutter-1-8">ǦoneWick</span>
+      <span class="icon-label tera bold">ǦoneWick</span>
     </a>
   </div>
 
-  <nav class="unit xs-1 m-2-3 l-2-3 text-right pad-l-2" role="navigation" id="nav" tabindex="0">
+  <nav class="unit xs-1 m-2-3 l-1-2 text-center pad-l-2" role="navigation" id="nav" tabindex="0">
     <ul class="list-group list-group-inline push-0">
-      <li class="unit {% if page.highlight_nav == 'about' %}currrent{% endif %} pad-b-1-2 pad-t-1-2"><a class="milli island-1-2" href="#">About</a></li>
-      <li class="unit {% if page.highlight_nav == 'shop' %}currrent{% endif %} pad-b-1-2 pad-t-1-2"><a class="milli island-1-2" href="/products/">Shop</a></li>
-      <li class="unit {% if page.highlight_nav == 'blog' %}currrent{% endif %} pad-b-1-4 pad-t-1-4"><a class="milli island-1-2" href="#">Blog</a></li>
+      <li class="unit {% if page.highlight_nav == 'about' %}current{% endif %} pad-b-1-2 pad-t-1-2"><a class="milli island-1-2" href="#">About</a></li>
+      <li class="unit {% if page.highlight_nav == 'shop' %}current{% endif %} pad-b-1-2 pad-t-1-2"><a class="milli island-1-2" href="/products/">Shop</a></li>
+      <li class="unit {% if page.highlight_nav == 'blog' %}current{% endif %} pad-b-1-4 pad-t-1-4"><a class="milli island-1-2" href="#">Blog</a></li>
+      <li class="unit {% if page.highlight_nav == 'checkout' %}current{% endif %} island-1-2 bag-dark absolute"><a href="checkout"><i><img src="/images/bag-dark.svg" alt=""></i></a></li>
+      <li class="unit {% if page.highlight_nav == 'checkout' %}current{% endif %} island-1-2 bag-light relative pin"><a href="checkout"><i><img src="/images/bag-light.svg" alt=""></i></a></li>
     </ul>
   </nav>
 </header>
