--- a/_patterns/sections/text-chunk.html
+++ b/_patterns/sections/text-chunk.html
@@ -1,3 +1,3 @@
-<div class="text-chunk wrapper max-length gutter">
+<div class="text-chunk wrapper max-length">
   <p class="milli">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore tetur sadipscing elitr, sed diam.</p>
 </div>
