Build checkout page and add form

--- a/_patterns/cards/product-view.html
+++ b/_patterns/cards/product-view.html
@@ -1,4 +1,4 @@
-<div class="product">
+<div class="product-view">
     <div class="product-img">
       <img class="img-flex" src="/images/vanilli.jpg" alt="">
     </div>
