--- a/_patterns/header/header.html
+++ b/_patterns/header/header.html
@@ -13,8 +13,8 @@
       <li class="unit {% if page.highlight_nav == 'about' %}current{% endif %} pad-b-1-2 pad-t-1-2"><a class="milli island-1-2" href="#">About</a></li>
       <li class="unit {% if page.highlight_nav == 'shop' %}current{% endif %} pad-b-1-2 pad-t-1-2"><a class="milli island-1-2" href="/products/">Shop</a></li>
       <li class="unit {% if page.highlight_nav == 'blog' %}current{% endif %} pad-b-1-4 pad-t-1-4"><a class="milli island-1-2" href="#">Blog</a></li>
-      <li class="unit {% if page.highlight_nav == 'checkout' %}current{% endif %} island-1-2 bag-dark absolute"><a href="checkout"><i><img src="/images/bag-dark.svg" alt=""></i></a></li>
-      <li class="unit {% if page.highlight_nav == 'checkout' %}current{% endif %} island-1-2 bag-light relative pin"><a href="checkout"><i><img src="/images/bag-light.svg" alt=""></i></a></li>
+      <li class="unit {% if page.highlight_nav == 'checkout' %}current{% endif %} island-1-2 bag-dark absolute"><a href="/checkout/"><i><img src="/images/bag-dark.svg" alt=""></i></a></li>
+      <li class="unit {% if page.highlight_nav == 'checkout' %}current{% endif %} island-1-2 bag-light relative pin"><a href="/checkout/"><i><img src="/images/bag-light.svg" alt=""></i></a></li>
     </ul>
   </nav>
 </header>
