Build pseudo product listing with grid and several units because I did not get to the looping magic quite yet. Shame!

--- a/_patterns/navigation/product-filters.html
+++ b/_patterns/navigation/product-filters.html
@@ -1,4 +1,4 @@
-<form class="grid grid-middle" action="#" method="post">
+<form class="grid grid-middle wrapper gutter push-2" action="#" method="post">
 
   <div class="unit xs-1 s-1-2 m-1-2 l-1-2 filter" tabindex="0">
     <div class="push-0 island-1-4">
