--- a/products.html
+++ b/products.html
@@ -4,3 +4,55 @@ highlight_nav: shop
 ---
 
 {% pattern banner/banner heading="Wax & Wane" text="A beautiful space that adapts to you. What do you need? " image="banner-2.jpg" colour="colour-2" %}
+{% pattern navigation/product-filters %}
+<div class="grid grid-middle wrapper">
+  <div class="unit s-1 m-1-3 l-1-4 island">
+    {% pattern cards/products-card %}
+  </div>
+  <div class="unit s-1 m-1-3 l-1-4 island">
+    {% pattern cards/products-card %}
+  </div>
+  <div class="unit s-1 m-1-3 l-1-4 island">
+    {% pattern cards/products-card %}
+  </div>
+  <div class="unit s-1 m-1-3 l-1-4 island">
+    {% pattern cards/products-card %}
+  </div>
+  <div class="unit s-1 m-1-3 l-1-4 island">
+    {% pattern cards/products-card %}
+  </div>
+  <div class="unit s-1 m-1-3 l-1-4 island">
+    {% pattern cards/products-card %}
+  </div>
+  <div class="unit s-1 m-1-3 l-1-4 island">
+    {% pattern cards/products-card %}
+  </div>
+  <div class="unit s-1 m-1-3 l-1-4 island">
+    {% pattern cards/products-card %}
+  </div>
+  <div class="unit s-1 m-1-3 l-1-4 island">
+    {% pattern cards/products-card %}
+  </div>
+  <div class="unit s-1 m-1-3 l-1-4 island">
+    {% pattern cards/products-card %}
+  </div>
+  <div class="unit s-1 m-1-3 l-1-4 island">
+    {% pattern cards/products-card %}
+  </div>
+  <div class="unit s-1 m-1-3 l-1-4 island">
+    {% pattern cards/products-card %}
+  </div>
+  <div class="unit s-1 m-1-3 l-1-4 island">
+    {% pattern cards/products-card %}
+  </div>
+  <div class="unit s-1 m-1-3 l-1-4 island">
+    {% pattern cards/products-card %}
+  </div>
+  <div class="unit s-1 m-1-3 l-1-4 island">
+    {% pattern cards/products-card %}
+  </div>
+  <div class="unit s-1 m-1-3 l-1-4 island">
+    {% pattern cards/products-card %}
+  </div>
+</div>
+{% pattern navigation/next-prev %}
