--- a/_patterns/forms/checkout-form.html
+++ b/_patterns/forms/checkout-form.html
@@ -64,7 +64,7 @@
         </div>
 
         <div class="unit xs-1 island-1-4 push">
-          {% pattern buttons/blue text="Do it" url="/checkout/" %}
+          {% pattern buttons/blue text="Do it" url="/index/" %}
         </div>
     </form>
   </div>
