Add a form submission button, and fix the footer styles
The form CSS has been adjusted so it (mostly) works; the page loads with the form errors showing, but they disappear as the user adds content into them.

Let me know if there's anything else I can do to help :)

--- a/_patterns/forms/checkout-form.html
+++ b/_patterns/forms/checkout-form.html
@@ -19,53 +19,47 @@
             </fieldset>
           </div>
 
-        <div class="unit xs-1 push island-1-8">
-          <label class="milli push-1-8" for="name">Name on card</label>
-          <div class="error-bg">
-            <input id="name" required aria-describedby="name-error">
-            <p class="error-message milli island-1-4 push-0" id="name-error">
-              <span class="icon-label">Please enter your name as it appears on card.</span>
-            </p>
-          </div>
-        </div>
-
-        <div class="unit xs-1 push island-1-8">
-          <label class="milli push-1-8" for="card-number">Card Number</label>
-          <div class="error-bg">
-            <input type="card-number" id="card-number" required aria-describedby="card-number-error">
-            <p class="error-message milli island-1-4 push-0" id="email-error">
-              <span class="icon-label">Please enter your card number.</span>
-            </p>
-          </div>
-        </div>
-
-        <div class="unit xs-1 s-1-2 push" tabindex="0">
-          <div class="push-1-2 island-1-4">
-            <label class="milli push-1-8" for="expiry">Expiry</label>
+          <div class="unit xs-1 push island-1-8">
+            <label class="milli push-1-8" for="name">Name on card</label>
             <div class="error-bg">
-              <input type="expiry" id="expiry" required aria-describedby="expiry-error">
-              <p class="error-message milli island-1-4 push-0" id="expiry-error">
-                <span class="icon-label">Please enter expiry.</span>
-              </p>
+              <input id="name" required aria-describedby="name-error">
+              <p class="error-message milli island-1-4 push-0" id="name-error"><span class="icon-label">Please enter your name as it appears on card.</span></p>
             </div>
           </div>
-        </div>
 
-        <div class="unit xs-1 s-1-2 island-1-4 push" tabindex="0">
-          <div class="push-1-2">
-            <label class="milli push-1-8" for="cvc">CVC</label>
+          <div class="unit xs-1 push island-1-8">
+            <label class="milli push-1-8" for="card-number">Card Number</label>
             <div class="error-bg">
-              <input type="cvc" id="cvc" required aria-describedby="cvc-error">
-              <p class="error-message milli island-1-4 push-0" id="cvc-error">
-                <span class="icon-label">Please enter CVC.</span>
-              </p>
+              <input type="text" id="card-number" required aria-describedby="card-number-error">
+              <p class="error-message milli island-1-4 push-0" id="card-number-error"><span class="icon-label">Please enter your card number.</span></p>
             </div>
           </div>
-        </div>
 
-        <div class="unit xs-1 island-1-4 push">
-          {% pattern buttons/blue text="Do it" url="/checkout/" %}
+          <div class="unit xs-1 s-1-2 push">
+            <div class="push-1-2 island-1-4">
+              <label class="milli push-1-8" for="expiry">Expiry</label>
+              <div class="error-bg">
+                <input type="text" id="expiry" required aria-describedby="expiry-error">
+                <p class="error-message milli island-1-4 push-0" id="expiry-error"><span class="icon-label">Please enter expiry.</span></p>
+              </div>
+            </div>
+          </div>
+
+          <div class="unit xs-1 s-1-2 island-1-4 push">
+            <div class="push-1-2">
+              <label class="milli push-1-8" for="cvc">CVC</label>
+              <div class="error-bg">
+                <input type="text" id="cvc" required aria-describedby="cvc-error">
+                <p class="error-message milli island-1-4 push-0" id="cvc-error"><span class="icon-label">Please enter CVC.</span></p>
+              </div>
+            </div>
+          </div>
+
+          <div class="unit xs-1 island-1-4 push">
+            {% pattern buttons/submit text="Do it" %}
+          </div>
         </div>
+      </div>
     </form>
   </div>
 </div>
